# homework-digitalkin

./: README.md  app.py  pyproject.toml  setup.py
agents/: agent1.py  agent2.py  agent_factory.py  customer_service_agent.py  technical_support_agent.py  tools.py
documents/: doc_technique.md
frontend/: app.py
mesh/: interaction.py
src/: app.py
src/agents/: agent_base.py  base_agent.py  customer_service_agent.py  technical_support_agent.py  tools.py
src/data/: data_test_python.json
src/mesh/: registry.py
src/tests/: test_agents.py  test_mesh.py  test_tools.py
tests/: test_agents.py  test_mesh.py
